
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct user_desc {unsigned long base_addr; int limit; int seg_32bit; int useable; int contents; int entry_number; } ;
typedef int desc ;


 int __NR_modify_ldt ;
 int blah ;
 int err (int,char*) ;
 scalar_t__ syscall (int ,int,struct user_desc*,int) ;

__attribute__((used)) static void do_ldt(void) {
  struct user_desc desc = {
    .entry_number = 0,
    .base_addr = (unsigned long)&blah,
    .limit = 0xffffffff,
    .seg_32bit = 1,
    .contents = 0,
    .useable = 1
  };
  if (syscall(__NR_modify_ldt, 0x11, &desc, sizeof(desc)))
    err(1, "modify_ldt");
}
